<resources>
    <string name="app_name">CrealiteApp</string>
    <string name="circlebg">circlebg</string>
    <string name="crealite">CREALITE</string>
    <string name="crea_la_elite">CREA LA ELITE</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="crealite2">Crealite</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="e_mail">E-Mail</string>
    <string name="oficio">Oficio</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="registrarse">Registrarse</string>
    <string name="cambiarFotoPerfil">CambiarFotoDePerfil</string>
    <string name="realizar_proyecto">REALIZAR PROYECTO</string>
    <string name="ver_proyectos">VER PROYECTOS</string>
    <string name="informacion_proyectos">informacion proyectos</string>
    <string name="nuevo_proyecto">NUEVO PROYECTO</string>
    <string name="nombre_del_proyecto">NOMBRE DEL PROYECTO</string>
    <string name="servicios_a_contratar">SERVICIOS A CONTRATAR</string>
    <string name="AddServce">Añadir Servicio para contratar\n</string>
    <string name="a_adir_servicio">AÑADIR SERVICIO</string>
    <string name="fotografia">FOTOGRAFIA</string>
    <string name="filmmaking">FILMMAKING</string>
    <string name="dise_o">DISEÑO</string>
    <string name="configurar_servicio">CONFIGURAR SERVICIO</string>
    <string name="down">down spinner\n</string>
    <string name="_02_05_2024">02-05-2024</string>
    <string name="hora">Hora:</string>
    <string name="min">Min:</string>
    <string name="localidad">LOCALIDAD</string>
    <string name="descripci_n">Descripción</string>
    <string name="horas_a_contratar">HORAS A CONTRATAR</string>
    <string name="back">back\n</string>
    <string name="navigation_drawe_open">Open navigation drawer</string>
    <string name="navigation_drawe_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servicios">Servicios</string>
    <string name="ProyectoView">Detalles del proyecto\n</string>
    <string name="progreso">Progreso</string>
    <string name="chat">Chat</string>
    <string name="tel_fono">Teléfono</string>
    <string name="horas">Horas:</string>
    <string name="don_benito_badajoz">DON BENITO, BADAJOZ</string>
    <string name="boda">BODA</string>
    <string name="primer_pago">PRIMER PAGO</string>
    <string name="presuspuesto_pendiente">*Presuspuesto Pendiente*</string>
    <string name="asignando_trabajadores">ASIGNANDO TRABAJADORES</string>
    <string name="todo">TODO</string>
    <string name="profesionales">Profesionales</string>
    <string name="btnmenu">btnMenu</string>
    <string name="estado_del_proyecto">ESTADO DEL PROYECTO</string>
    <string name="_26_04_2024">26-04-2024</string>
    <string name="making_off">MAKING OFF</string>
    <string name="numero_de_videos">NUMERO DE VIDEOS</string>
    <string name="alto">Alto del diseño</string>
    <string name="alto2">Alto:</string>
    <string name="ancho2">Ancho:</string>
    <string name="animado">ANIMADO</string>
    <string name="ciudad">Ciudad</string>
    <string name="fotografia2">FOTOGRAFIA</string>
    <string name="finalizado">FINALIZADO:</string>
    <string name="pagado">PAGADO:</string>
    <string name="servicios2">SERVICIOS:</string>
    <string name="pagar">PAGAR</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="proceso">proceso</string>
</resources>