<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/trasparent_background"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00999999"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arizonia"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/crealite"
                android:textColor="@color/orange"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5sp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:letterSpacing="0.5"
                android:text="@string/nuevo_proyecto"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/orange" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtNombreProyecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/nombre_del_proyecto"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/txtEstadoProyecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/presuspuesto_pendiente"
        android:textColor="@color/orange"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrarse"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_bg"
        android:enabled="true"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/primer_pago"
        android:textColor="@color/black"
        android:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:tabIndicatorColor="@color/orange"
        app:tabSelectedTextColor="@color/orange">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicios" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progreso" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ProyectoView" />
</LinearLayout>