<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/orange" />

            <TextView
                android:id="@+id/txtNombrePr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginBottom="10dp"
                android:text="@string/fotografia2"
                android:textColor="@color/orange"
                android:textSize="17sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:background="@color/orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:text="@string/servicios2"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/txtNumServicios"
                    android:layout_width="29dp"
                    android:layout_height="19dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:text="@string/pagado"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/txtpagado"
                    android:layout_width="29dp"
                    android:layout_height="19dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="SI"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:text="@string/finalizado"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/txtFinalizado"
                    android:layout_width="29dp"
                    android:layout_height="19dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="SI"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@color/orange" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDescripción"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:background="@drawable/orange_button_bg"
                android:stateListAnimator="@android:anim/fade_in"
                android:text="VER DETALLES"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>